@@ -1,3 +1,7 @@
+Wed Jan 21 09:33:39 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/replacements/vasprintf.c: fix portability problem
+	* src/tds/challenge.c: check correctly error converting to ucs2
+
 Mon Jan 19 15:36:50 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/mem.c: dos2unix
 
@@ -1213,4 +1217,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2711 2009-01-19 14:37:24 freddy77 Exp $
+$Id: ChangeLog,v 1.2712 2009-01-21 08:34:01 freddy77 Exp $
